--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
 			<version>2.17.0</version>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.flywaydb</groupId>-->
+<!--			<artifactId>flyway-core</artifactId>-->
+<!--			<version>9.5.1</version>-->
+<!--		</dependency>-->
+
+
 	</dependencies>
 
 	<build>
